Add status bar (not fully functioning) and reformat functions

--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@ Needs:
                     <img id="stop" src="images/stop.png">
                 </div>
             </div>
+            <div class="progress">
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+            </div>
         </div>
         <div class="settings">
             <div class="session">
