--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@ Needs:
                 </div>
             </div>
             <div class="progress">
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
+                <div class="circle" id="1"></div>
+                <div class="circle" id="3"></div>
+                <div class="circle" id="5"></div>
+                <div class="circle" id="7"></div>
             </div>
         </div>
         <div class="settings">
@@ -72,6 +72,9 @@ Needs:
             </div>
         </div>
     </div>
+    <audio class="play" src="audio/begin.mp3"></audio>
+    <audio class="halt" src="audio/pause.mp3"></audio>
+    <audio class="all-done" src="audio/complete.mp3"></audio>
 </body>
 <script src="script/script.js"></script>
 </html>
